# vc-notary

./: .gitmodules  README.md
back-end/: .gitignore  Cargo.toml  README.md
back-end/src/: auth.rs  main.rs  notarize.rs  present.rs  verify.rs
front-end/: .env.example  README.md  package-lock.json  package.json
front-end/src/: App.tsx
front-end/src/lib/: auth.ts
issuer/: Cargo.toml  README.md
issuer/credential-service/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
issuer/credential-service/src/: create-credential.ts  server.ts
issuer/credential-service/src/veramo/: setup.ts
issuer/src/: main.rs
