[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
base64 = "0.13"
dotenv = "0.15"
serde_json = "1.0"
http-body-util = "0.1"
hyper = "1.1"
hyper-util = "0.1"
tokio-util = "0.7"
tracing = "0.1"
bincode = "1.3"

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.6.1", features = ["cors"] }

notary-client = { path = "../tlsn/crates/notary/client" }
tlsn-core = { path = "../tlsn/crates/core" }
tlsn-common = { path = "../tlsn/crates/common" }
tlsn-prover = { path = "../tlsn/crates/prover" }
tlsn-formats = { path = "../tlsn/crates/formats" }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6" }
